--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <option value="random" data-arg="50">50% Population</option>
                 <option value="random" data-arg="80">80% Population</option>
                 <option value="random" data-arg="95">95% Population</option>
+                <option value="selection" data-arg="[[1,5],[2,5],[1,6],[2,6],[11,5],[11,6],[11,7],[12,4],[12,8],[13,3],[13,9],[14,3],[14,9],[15,6],[16,4],[16,8],[17,5],[17,6],[17,7],[18,6],[21,5],[21,4],[21,3],[22,5],[22,4],[22,3],[23,2],[23,6],[25,2],[25,1],[25,6],[25,7],[35,3],[35,4],[36,3],[36,4]]">Gosper glider gun</option>
             </select>
             <p>Evolution speed:</p>
             <select name="period">
