--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <option value="random" data-arg="50">50% Population</option>
                 <option value="random" data-arg="80">80% Population</option>
                 <option value="random" data-arg="95">95% Population</option>
+                <option value="selection" data-arg="[[7,4],[8,4],[9,4],[13,4],[14,4],[15,4],[5,6],[10,6],[12,6],[17,6],[5,7],[10,7],[12,7],[17,7],[5,8],[10,8],[12,8],[17,8],[7,9],[8,9],[9,9],[13,9],[14,9],[15,9],[7,11],[8,11],[9,11],[13,11],[14,11],[15,11],[5,12],[10,12],[12,12],[17,12],[5,13],[10,13],[12,13],[17,13],[5,14],[10,14],[12,14],[17,14],[7,16],[8,16],[9,16],[13,16],[14,16],[15,16]]">Pulsar</option>
                 <option value="selection" data-arg="[[1,5],[2,5],[1,6],[2,6],[11,5],[11,6],[11,7],[12,4],[12,8],[13,3],[13,9],[14,3],[14,9],[15,6],[16,4],[16,8],[17,5],[17,6],[17,7],[18,6],[21,5],[21,4],[21,3],[22,5],[22,4],[22,3],[23,2],[23,6],[25,2],[25,1],[25,6],[25,7],[35,3],[35,4],[36,3],[36,4]]">Gosper glider gun</option>
             </select>
             <p>Evolution speed:</p>
@@ -34,6 +35,7 @@
             </select>
             <button name="start">Start</button>
             <button name="stop" disabled>Stop</button>
+            <button name="save">Save</button>
         </form>
         <form id="form_status">
             <p>Iteration: <span name="steps">0</span></p>
