--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Cache-Control" content="no-cache">
     <title>Conway's Game of Life</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <!-- Stylesheets -->
     <link rel="stylesheet" type="text/css" href="style/default.css">
     <link rel="stylesheet" type="text/css" href="style/main.css">
@@ -22,7 +24,8 @@
                 <option value="random" data-arg="50">50% Population</option>
                 <option value="random" data-arg="80">80% Population</option>
                 <option value="random" data-arg="95">95% Population</option>
-                <option value="selection" data-arg="[[7,4],[8,4],[9,4],[13,4],[14,4],[15,4],[5,6],[10,6],[12,6],[17,6],[5,7],[10,7],[12,7],[17,7],[5,8],[10,8],[12,8],[17,8],[7,9],[8,9],[9,9],[13,9],[14,9],[15,9],[7,11],[8,11],[9,11],[13,11],[14,11],[15,11],[5,12],[10,12],[12,12],[17,12],[5,13],[10,13],[12,13],[17,13],[5,14],[10,14],[12,14],[17,14],[7,16],[8,16],[9,16],[13,16],[14,16],[15,16]]">Pulsar</option>
+                <option value="selection" data-arg="[[3,3],[4,3],[5,3],[6,3],[7,3],[8,3],[10,3],[11,3],[3,4],[4,4],[5,4],[6,4],[7,4],[8,4],[10,4],[11,4],[10,5],[11,5],[3,6],[4,6],[10,6],[11,6],[3,7],[4,7],[10,7],[11,7],[3,8],[4,8],[10,8],[11,8],[3,9],[4,9],[3,10],[4,10],[6,10],[7,10],[8,10],[9,10],[10,10],[11,10],[3,11],[4,11],[6,11],[7,11],[8,11],[9,11],[10,11],[11,11]]">Kok's galaxy</option>
+                <option value="selection" data-arg="[[4,3],[7,3],[4,4],[5,4],[6,4],[7,4],[3,5],[8,5],[3,6],[5,6],[6,6],[8,6],[3,7],[8,7],[4,8],[5,8],[6,8],[7,8]]">Cheshire cat</option>
                 <option value="selection" data-arg="[[1,5],[2,5],[1,6],[2,6],[11,5],[11,6],[11,7],[12,4],[12,8],[13,3],[13,9],[14,3],[14,9],[15,6],[16,4],[16,8],[17,5],[17,6],[17,7],[18,6],[21,5],[21,4],[21,3],[22,5],[22,4],[22,3],[23,2],[23,6],[25,2],[25,1],[25,6],[25,7],[35,3],[35,4],[36,3],[36,4]]">Gosper glider gun</option>
             </select>
             <p>Evolution speed:</p>
@@ -41,6 +44,11 @@
             <p>Iteration: <span name="steps">0</span></p>
             <p>Population: <span name="population">0.0</span>% [<span name="pop_min">0.0</span>%, <span name="pop_max">0.0</span>%]</p>
         </form>
+        <div id="form_links">
+            <p>Some links:</p>
+            <a target="_blank" href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Conway's Game of Life: Wikipedia</a>
+            <a target="_blank" href="http://www.bitstorm.org/gameoflife/lexicon">Life Lexicon</a>
+        </div>
     </div>
     <!-- Javascript Libs -->
     <script type="text/javascript" src="lib/jquery-min.js"></script>
