--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
             <a target="_blank" href="http://www.bitstorm.org/gameoflife/lexicon">Life Lexicon</a>
         </div>
     </div>
-    <!-- Javascript Libs -->
-    <script type="text/javascript" src="lib/jquery-min.js"></script>
     <!-- Javascript Code -->
-    <script type="text/javascript" src="prog/main.js"></script>
+    <script data-main="app" src="lib/require-min.js"></script>
 </body>
 </html>
