--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </form>
         <form id="form_status">
             <p>Iteration: <span name="steps">0</span></p>
+            <p>Active cells: <span name="active">0.0</span>%</p>
             <p>Population: <span name="population">0.0</span>% [<span name="pop_min">0.0</span>%, <span name="pop_max">0.0</span>%]</p>
         </form>
         <div id="form_links">
