--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <!-- Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="style/default.css">
     <link rel="stylesheet" type="text/css" href="style/main.css">
 </head>
 <body>
@@ -52,6 +51,6 @@
         </div>
     </div>
     <!-- Javascript Code -->
-    <script data-main="app" src="lib/require-min.js"></script>
+    <script type="text/javascript" src="lib/require-min.js" data-main="app"></script>
 </body>
 </html>
