--- a/index.html
+++ b/index.html
@@ -16,25 +16,9 @@
     <div class="container" id="container_control">
         <form id="form_control" onsubmit="return false">
             <p>Initial state:</p>
-            <select name="algo">
-                <option value="constant" data-arg="0">Empty</option>
-                <option value="random" data-arg="5">5% Population</option>
-                <option value="random" data-arg="20">20% Population</option>
-                <option value="random" data-arg="50">50% Population</option>
-                <option value="random" data-arg="80">80% Population</option>
-                <option value="random" data-arg="95">95% Population</option>
-                <option value="selection" data-arg="[[3,3],[4,3],[5,3],[6,3],[7,3],[8,3],[10,3],[11,3],[3,4],[4,4],[5,4],[6,4],[7,4],[8,4],[10,4],[11,4],[10,5],[11,5],[3,6],[4,6],[10,6],[11,6],[3,7],[4,7],[10,7],[11,7],[3,8],[4,8],[10,8],[11,8],[3,9],[4,9],[3,10],[4,10],[6,10],[7,10],[8,10],[9,10],[10,10],[11,10],[3,11],[4,11],[6,11],[7,11],[8,11],[9,11],[10,11],[11,11]]">Kok's galaxy</option>
-                <option value="selection" data-arg="[[4,3],[7,3],[4,4],[5,4],[6,4],[7,4],[3,5],[8,5],[3,6],[5,6],[6,6],[8,6],[3,7],[8,7],[4,8],[5,8],[6,8],[7,8]]">Cheshire cat</option>
-                <option value="selection" data-arg="[[1,5],[2,5],[1,6],[2,6],[11,5],[11,6],[11,7],[12,4],[12,8],[13,3],[13,9],[14,3],[14,9],[15,6],[16,4],[16,8],[17,5],[17,6],[17,7],[18,6],[21,5],[21,4],[21,3],[22,5],[22,4],[22,3],[23,2],[23,6],[25,2],[25,1],[25,6],[25,7],[35,3],[35,4],[36,3],[36,4]]">Gosper glider gun</option>
-            </select>
+            <select name="algo"></select>
             <p>Evolution speed:</p>
-            <select name="period">
-                <option value="5000">Very slow</option>
-                <option value="1500">Slow</option>
-                <option value="400" selected>Middle</option>
-                <option value="100">Fast</option>
-                <option value="20">Very fast</option>
-            </select>
+            <select name="period"></select>
             <button name="start">Start</button>
             <button name="stop" disabled>Stop</button>
             <button name="save">Save</button>
