--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <button name="save">Save</button>
         </form>
         <form id="form_status">
+            <p>Size: <span name="width">0</span> x <span name="height">0</span> [<span name="capacity">0</span>]</p>
             <p>Iteration: <span name="steps">0</span></p>
             <p>Active cells: <span name="active">0.0</span>%</p>
             <p>Population: <span name="population">0.0</span>% [<span name="pop_min">0.0</span>%, <span name="pop_max">0.0</span>%]</p>
